all add new file

--- a/building_blocks.html
+++ b/building_blocks.html
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-   <!-- Header start -->
+    <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -54,13 +54,13 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-home"> Educational
+                                                    <a class="dropdown-item" href="#v-pills-home"> Educational
                                                         Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-profile">Construction Toy
+                                                    <a class="dropdown-item" href="#v-pills-profile">Construction Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -68,48 +68,50 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings0"> Board Game</a>
+                                                    <a class="dropdown-item" href="#v-pills-settings0"> Board Game</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings1">Musical Toy</a>
-                                                </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings2"> Puzzle Game </a>
-                                                </li>
-                                            </td>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings3"> Building Blocks </a>
+                                                    <a class="dropdown-item" href="#v-pills-settings1">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings6"> Sports Toy </a>
+                                                    <a class="dropdown-item" href="#v-pills-settings2"> Puzzle Game </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings7"> Creative Toy </a>
+                                                    <a class="dropdown-item" href="#v-pills-settings3"> Building Blocks
+                                                    </a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings8"> Baby Toy</a>
+                                                    <a class="dropdown-item" href="#v-pills-settings6"> Sports Toy </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
+                                                    <a class="dropdown-item" href="#v-pills-settings7"> Creative Toy
+                                                    </a>
+                                                </li>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="#v-pills-settings8"> Baby Toy</a>
+                                                </li>
+                                            </td>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="#v-pills-settings9">Outdoor Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -117,11 +119,11 @@
                                 </table>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday Gifts</a></li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings5" class="nav-link">Corporate Gifts</a></li>
+                        <li class="nav-item"><a href="#v-pills-settings4" class="nav-link">Birthday Gifts</a></li>
+                        <li class="nav-item"><a href="#v-pills-settings5" class="nav-link">Corporate Gifts</a></li>
                     </ul>
                 </div>
-                <div class="col-auto ms-lg-auto mx-auto">
+                <div class="col-auto ms-lg-auto mx-auto position-relative">
                     <div class="input-group">
                         <input class="form-control" type="text" placeholder="Search Products/Services" id="Search">
                         <div class="input-group-text">
@@ -131,6 +133,29 @@
                             </label>
                         </div>
                     </div>
+                    <!-- search product list -->
+                    <div id="productList">
+                        <div class="product-item"><a href="baby_rattles.html"> Baby Rattles 8 Pcs</a></div>
+                        <div class="product-item"><a href="wooden_table.html">Wooden Table Tennis Trainer</a></div>
+                        <div class="product-item"><a href="frog_tree.html">Frog Tree Balance Game</a></div>
+                        <div class="product-item"><a href="triggle_chess.html">Triggle Chess Game</a></div>
+                        <div class="product-item"><a href="iq_game.html">IQ Game - 120 Challenges</a></div>
+                        <div class="product-item"><a href="memory_chess.html">Memory Chess Game</a></div>
+                        <div class="product-item"><a href="gobble_game.html">Gobble Game</a></div>
+                        <div class="product-item"><a href="otrio_tri-ring.html">Otrio Tri-Ring Strategy Game</a></div>
+                        <div class="product-item"><a href="tic_tac_toe.html">Tic Tac Toe Classic Game</a></div>
+                        <div class="product-item"><a href="montessori_learning.html">2 in 1 Montessori Learning toy</a></div>
+                        <div class="product-item"><a href="shape_matching.html">Shape Matching Game</a></div>
+                        <div class="product-item"><a href="alpha_numeric.html">Alpha Numeric Board - 29 Sticks</a></div>
+                        <div class="product-item"><a href="magic_beans.html">Magic Beans Puzzle Spinner Cube</a></div>
+                        <div class="product-item"><a href="infinity_cube.html">Infinity Cube</a></div>
+                        <div class="product-item"><a href="#">Pyramid Cub</a></div>
+                        <div class="product-item"><a href="starlink_educational.html">Starlink Building Blocks 100 Pcs</a></div>
+                        <div class="product-item"><a href="building_blockss.html">Building Block With Wheel 75 Pcs</a></div>
+                        <div class="product-item"><a href="#">75 Pcs Building Block With Wheel</a></div>
+                        <!-- <div class="product-item"><a href="bala">Balancing Tower</a></div> -->
+                    </div>
+                    <!-- search product list -->
                 </div>
             </div>
         </div>
@@ -654,8 +679,8 @@
     </div>
     <!-- form -->
     <!-- Building end -->
-   <!-- footer start -->
-   <section class="contact mt-5">
+    <!-- footer start -->
+    <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
                 <div class="col-md-3 pt-4">
@@ -764,6 +789,8 @@
     <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"></script>
+    <script src="./assets/js/search.js"></script>
+
     <script>
         function changeImage(thumb) {
             const main = document.getElementById('mainDisplay');
