--- a/toys-games.html
+++ b/toys-games.html
@@ -123,7 +123,7 @@
                         <li class="nav-item"><a href="#v-pills-settings5" class="nav-link">Corporate Gifts</a></li>
                     </ul>
                 </div>
-                <div class="col-auto ms-lg-auto mx-auto">
+                <div class="col-auto ms-lg-auto mx-auto position-relative">
                     <div class="input-group">
                         <input class="form-control" type="text" placeholder="Search Products/Services" id="Search">
                         <div class="input-group-text">
@@ -133,6 +133,29 @@
                             </label>
                         </div>
                     </div>
+                    <!-- search product list -->
+                    <div id="productList">
+                        <div class="product-item"><a href="baby_rattles.html"> Baby Rattles 8 Pcs</a></div>
+                        <div class="product-item"><a href="wooden_table.html">Wooden Table Tennis Trainer</a></div>
+                        <div class="product-item"><a href="frog_tree.html">Frog Tree Balance Game</a></div>
+                        <div class="product-item"><a href="triggle_chess.html">Triggle Chess Game</a></div>
+                        <div class="product-item"><a href="iq_game.html">IQ Game - 120 Challenges</a></div>
+                        <div class="product-item"><a href="memory_chess.html">Memory Chess Game</a></div>
+                        <div class="product-item"><a href="gobble_game.html">Gobble Game</a></div>
+                        <div class="product-item"><a href="otrio_tri-ring.html">Otrio Tri-Ring Strategy Game</a></div>
+                        <div class="product-item"><a href="tic_tac_toe.html">Tic Tac Toe Classic Game</a></div>
+                        <div class="product-item"><a href="montessori_learning.html">2 in 1 Montessori Learning toy</a></div>
+                        <div class="product-item"><a href="shape_matching.html">Shape Matching Game</a></div>
+                        <div class="product-item"><a href="alpha_numeric.html">Alpha Numeric Board - 29 Sticks</a></div>
+                        <div class="product-item"><a href="magic_beans.html">Magic Beans Puzzle Spinner Cube</a></div>
+                        <div class="product-item"><a href="infinity_cube.html">Infinity Cube</a></div>
+                        <div class="product-item"><a href="#">Pyramid Cub</a></div>
+                        <div class="product-item"><a href="starlink_educational.html">Starlink Building Blocks 100 Pcs</a></div>
+                        <div class="product-item"><a href="building_blockss.html">Building Block With Wheel 75 Pcs</a></div>
+                        <div class="product-item"><a href="#">75 Pcs Building Block With Wheel</a></div>
+                        <!-- <div class="product-item"><a href="bala">Balancing Tower</a></div> -->
+                    </div>
+                    <!-- search product list -->
                 </div>
             </div>
         </div>
@@ -421,7 +444,7 @@
                                             <h5 class="card-title">Baby's First Block Set</h5>
                                             <p class="card-text">Colorful, easy-to-hold blocks with letters and numbers
                                                 for learning.</p>
-                                                  <h4><b>₹ 199</b></h4>
+                                            <h4><b>₹ 199</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="baby's_first.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -435,7 +458,7 @@
                                             <h5 class="card-title">Starlink Educational Blocks</h5>
                                             <p class="card-text">Creative and colorful toys to boost kids' learning and
                                                 imagination.</p>
-                                                 <h4><b>₹ 199</b></h4>
+                                            <h4><b>₹ 199</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="starlink_educational.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -449,7 +472,7 @@
                                             <h5 class="card-title">Magnetic Stick & Ball 24 Pcs</h5>
                                             <p class="card-text"> Creative and colorful magnetic blocks for hours of fun
                                                 and learning.</p>
-                                                  <h4><b>₹ 349</b></h4>
+                                            <h4><b>₹ 349</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="magnetic_stick .html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -463,7 +486,7 @@
                                             <h5 class="card-title">Building Blocks With Wheel</h5>
                                             <p class="card-text">Building blocks set with wheels, perfect for creative
                                                 play and fun.</p>
-                                                   <h4><b>₹ 169</b></h4>
+                                            <h4><b>₹ 169</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="building_blockss.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -584,7 +607,7 @@
                                             <h5 class="card-title">Xylophone Musical Toy</h5>
                                             <p class="card-text">Colorful xylophone musical toy combines piano and
                                                 xylophone toys.</p>
-                                                  <h4><b>₹ 299</b></h4>
+                                            <h4><b>₹ 299</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="xylophone_musical.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -596,7 +619,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">5 Key Xylophone</h5>
                                             <p class="card-text"> Mini blue 5-key xylophone and piano toy for kids.</p>
-                                              <h4><b>₹ 299</b></h4>
+                                            <h4><b>₹ 299</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="xylophone_musical.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -608,7 +631,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Xylophone Musical Toy</h5>
                                             <p class="card-text">Yellow 2-in-1 mini piano and xylophone musical toy.</p>
-                                              <h4><b>₹ 299</b></h4>
+                                            <h4><b>₹ 299</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="xylophone_musical.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -621,7 +644,7 @@
                                             <h5 class="card-title">Baby Rattles For New Born</h5>
                                             <p class="card-text">Colorful animal-shaped baby rattles, perfect for
                                                 newborn sensory.</p>
-                                                  <h4><b>₹ 199</b></h4>
+                                            <h4><b>₹ 199</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="baby_rattles.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -634,7 +657,7 @@
                                             <h5 class="card-title">Air Plan Launcher Gun</h5>
                                             <p class="card-text">Yellow toy gun launches colorful mini airplanes for
                                                 outdoor fun.</p>
-                                                  <h4><b>₹ 299</b></h4>
+                                            <h4><b>₹ 299</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="air_plan.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -642,12 +665,13 @@
                                 </div>
                                 <div class="col  d-flex mb-3">
                                     <div class="card">
-                                        <img src="./assets/img/Products img/Edited/F200/A1.jpg" class="card-img-top" alt="...">
+                                        <img src="./assets/img/Products img/Edited/F200/A1.jpg" class="card-img-top"
+                                            alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Infinity Smart Track</h5>
                                             <p class="card-text">Colorful infinity loop track for fun, smart ball play.
                                             </p>
-                                              <h4><b>₹ 199</b></h4>
+                                            <h4><b>₹ 199</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="infinity_smart.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -1008,7 +1032,7 @@
                                             <h5 class="card-title">Rattle For Newborn</h5>
                                             <p class="card-text">Newborn rattle stimulates senses, encourages grasping,
                                                 and soothes.</p>
-                                                <h4><b>₹ 199</b></h4>
+                                            <h4><b>₹ 199</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="baby_rattles.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -1258,6 +1282,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"></script>
     <script src="./assets/js/toys-games.js"></script>
+    <script src="./assets/js/search.js"></script>
 </body>
 
 </html>
