--- a/shape_shorter.html
+++ b/shape_shorter.html
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-    <!-- Header start -->
+     <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -54,15 +54,13 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-home">
-                                                        Educational
+                                                    <a class="dropdown-item" href="#v-pills-home"> Educational
                                                         Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item"
-                                                        href="toys-games.html#v-pills-profile">Construction Toy
+                                                    <a class="dropdown-item" href="#v-pills-profile">Construction Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -70,56 +68,50 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings0">
-                                                        Board Game</a>
+                                                    <a class="dropdown-item" href="#v-pills-settings0"> Board Game</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item"
-                                                        href="toys-games.html#v-pills-settings1">Musical Toy</a>
-                                                </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings2">
-                                                        Puzzle Game </a>
-                                                </li>
-                                            </td>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings3">
-                                                        Building Blocks </a>
+                                                    <a class="dropdown-item" href="#v-pills-settings1">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings6">
-                                                        Sports Toy </a>
+                                                    <a class="dropdown-item" href="#v-pills-settings2"> Puzzle Game </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings7">
-                                                        Creative Toy </a>
+                                                    <a class="dropdown-item" href="#v-pills-settings3"> Building Blocks
+                                                    </a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings8">
-                                                        Baby Toy</a>
+                                                    <a class="dropdown-item" href="#v-pills-settings6"> Sports Toy </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item"
-                                                        href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
+                                                    <a class="dropdown-item" href="#v-pills-settings7"> Creative Toy
+                                                    </a>
+                                                </li>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="#v-pills-settings8"> Baby Toy</a>
+                                                </li>
+                                            </td>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="#v-pills-settings9">Outdoor Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -127,13 +119,11 @@
                                 </table>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday
-                                Gifts</a></li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings5" class="nav-link">Corporate
-                                Gifts</a></li>
+                        <li class="nav-item"><a href="#v-pills-settings4" class="nav-link">Birthday Gifts</a></li>
+                        <li class="nav-item"><a href="#v-pills-settings5" class="nav-link">Corporate Gifts</a></li>
                     </ul>
                 </div>
-                <div class="col-auto ms-lg-auto mx-auto">
+                <div class="col-auto ms-lg-auto mx-auto position-relative">
                     <div class="input-group">
                         <input class="form-control" type="text" placeholder="Search Products/Services" id="Search">
                         <div class="input-group-text">
@@ -143,6 +133,32 @@
                             </label>
                         </div>
                     </div>
+                    <!-- search product list -->
+                    <div id="productList">
+                        <div class="product-item"><a href="baby_rattles.html"> Baby Rattles 8 Pcs</a></div>
+                        <div class="product-item"><a href="wooden_table.html">Wooden Table Tennis Trainer</a></div>
+                        <div class="product-item"><a href="frog_tree.html">Frog Tree Balance Game</a></div>
+                        <div class="product-item"><a href="triggle_chess.html">Triggle Chess Game</a></div>
+                        <div class="product-item"><a href="iq_game.html">IQ Game - 120 Challenges</a></div>
+                        <div class="product-item"><a href="memory_chess.html">Memory Chess Game</a></div>
+                        <div class="product-item"><a href="gobble_game.html">Gobble Game</a></div>
+                        <div class="product-item"><a href="otrio_tri-ring.html">Otrio Tri-Ring Strategy Game</a></div>
+                        <div class="product-item"><a href="tic_tac_toe.html">Tic Tac Toe Classic Game</a></div>
+                        <div class="product-item"><a href="montessori_learning.html">2 in 1 Montessori Learning toy</a>
+                        </div>
+                        <div class="product-item"><a href="shape_matching.html">Shape Matching Game</a></div>
+                        <div class="product-item"><a href="alpha_numeric.html">Alpha Numeric Board - 29 Sticks</a></div>
+                        <div class="product-item"><a href="magic_beans.html">Magic Beans Puzzle Spinner Cube</a></div>
+                        <div class="product-item"><a href="infinity_cube.html">Infinity Cube</a></div>
+                        <div class="product-item"><a href="#">Pyramid Cub</a></div>
+                        <div class="product-item"><a href="starlink_educational.html">Starlink Building Blocks 100
+                                Pcs</a></div>
+                        <div class="product-item"><a href="building_blockss.html">Building Block With Wheel 75 Pcs</a>
+                        </div>
+                        <div class="product-item"><a href="#">75 Pcs Building Block With Wheel</a></div>
+                        <!-- <div class="product-item"><a href="bala">Balancing Tower</a></div> -->
+                    </div>
+                    <!-- search product list -->
                 </div>
             </div>
         </div>
@@ -241,7 +257,7 @@
                         <h3><b>₹ 199</b></h3>
                         <span>Free Delivery</span>
                         <div class="text-center mt-4">
-                            <a href="https://wa.link/xmj64w" class="button rounded-1" id="whats-link">
+                            <a href="https://wa.link/5ivqmm" class="button rounded-1" id="whats-link">
                                 <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
                                 CONNECT US</a>
                         </div>
@@ -265,64 +281,7 @@
                         </ul>
 
                     </div>
-                </div>
-                <!-- <div class="col-lg-6 px-5 pt-4">
-                    <div class="border box p-4">
-                        <h2><b>Alpha Numeric Puzzle Game</b></h2>
-                        <table>
-                            <tbody>
-                                <tr>
-                                    <td class="fw6">Material</td>
-                                    <td>Plastic</td>
-                                </tr>
-                                <tr>
-                                    <td class="fw6">Color</td>
-                                    <td>NA</td>
-                                </tr>
-                                <tr>
-                                    <td class="fw6">Age Group</td>
-                                    <td>3+</td>
-                                </tr>
-                                <tr>
-                                    <td class="fw6">Packaging</td>
-                                    <td>Printed Box</td>
-                                </tr>
-                                <tr>
-                                    <td class="fw6">Inner</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td class="fw6">Outer/ Master</td>
-                                    <td>112</td>
-                                </tr>
-                                <tr>
-                                    <td class="fw6">Rate</td>
-                                    <td>51 +12% Gst</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <p class="mb-1 mt-2"><b>Alpha Numeric Puzzle Game – Learn Through Play!</b></p>
-                        <p>Make early learning fun and engaging with the Alpha Numeric Puzzle Game! Designed to
-                            introduce kids to letters and numbers in a hands-on way, this colorful puzzle encourages
-                            cognitive development while keeping little minds entertained. </p>
-                        <p><b>Features:</b></p>
-                        <ul>
-                            <li><b>Complete Learning Set: </b> Includes all 26 letters (A–Z) and numbers 0–9 to build
-                                literacy and numeracy skills.</li>
-                            <li><b>Bright & Engaging: </b>Vivid colors and fun shapes capture children’s attention and
-                                spark curiosity.</li>
-
-                        </ul>
-                        <div class="text-center mt-4">
-                            <a href="https://wa.link/xmj64w" class="button" id="whats-link">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                CONNECT US</a>
-                            <a href="#" class="button" id="buy-now">
-                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
-                                BUY NOW</a>
-                        </div>
-                    </div>
-                </div> -->
+                </div>  
             </div>
 
         </div>
@@ -439,6 +398,8 @@
     <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"></script>
+        <script src="./assets/js/search.js"></script>
+
     <script>
         function changeImage(thumb) {
             const main = document.getElementById('mainDisplay');
